classes dbal et daoPays

--- a/foot/ModelLayers/ModelLayers.csproj
+++ b/foot/ModelLayers/ModelLayers.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Business\" />
-    <Folder Include="Data\" />
     <Folder Include="database_schema\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.22" />
   </ItemGroup>
 
 </Project>
