--- a/foot/ModelLayers/ModelLayers.csproj
+++ b/foot/ModelLayers/ModelLayers.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="16.2.0" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
   </ItemGroup>
 
